--- a/works/personalpage/assets/css/style.css
+++ b/works/personalpage/assets/css/style.css
@@ -111,12 +111,14 @@ color:#fff;
      max-height:200px;
      border-radius: 50%;
    border:5px solid rgb(255, 15, 101);
-  content:url('../img/sad1.jpg');  /*SAD IMAGE URL  - LEFT SIDE IMAGE*/
+  /*content:url('../img/sad.jpg');  !*SAD IMAGE URL  - LEFT SIDE IMAGE*!*/
+     content: "";
   cursor:pointer;
 }
  #home-sec .main-img:hover {
      border-radius: 50%;
-  content:url('../img/smile1.jpg'); /*SIMLE IMAGE URL ON HOVER - LEFT SIDE IMAGE*/
+  /*content:url('../img/smile.jpg'); !*SIMLE IMAGE URL ON HOVER - LEFT SIDE IMAGE*!*/
+     content: "";
   cursor:pointer;
 }
     #home-sec a,#home a:hover {
@@ -126,12 +128,12 @@ color:#fff;
     border-radius: 50%;
      max-height:200px;
    border:5px solid rgb(255, 15, 101);
-  content:url('../img/smile1.jpg');  /*SMILE IMAGE URL  - RIGHT SIDE IMAGE*/
+  content:url('../img/smile.jpg');  /*SMILE IMAGE URL  - RIGHT SIDE IMAGE*/
   cursor:pointer;
 }
 #home-sec .main-img-2:hover {
     border-radius: 50%;
-  content:url('../img/sad1.jpg');  /*SAD IMAGE URL ON HOVER - RIGHT SIDE IMAGE*/
+  content:url('../img/sad.jpg');  /*SAD IMAGE URL ON HOVER - RIGHT SIDE IMAGE*/
   cursor:pointer;
 }
  
@@ -616,5 +618,14 @@ opacity:0.7;
 .see{
     color: #fff;
 }
+
+.erweima img{
+    width: 180px;
+    height: 180px;
+}
+.erweima p{
+    margin-left: 26px;
+}
+
 
 
